# SlideBuildWithBazel

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  Package.resolved  Package.swift  README.md  Readmd.md  WORKSPACE  swift_deps.bzl  swift_deps_index.json
DL/: BUILD  DLPage.swift  Plugin.swift
Part1_Build/: BUILD  MakePage.swift  Part1.swift  SimplePage.swift  SwiftPage.swift
Part2_Bazel/: BUILD  Bazel.swift  Bazel1Intro.swift  Bazel2Bazelisk.swift  Bazel3+C.swift  Bazel4Term.swift  Bazel4_1WS.swift  Bazel4_2BUILD.swift  Bazel4_3Label.swift  Bazel4_4Rule.swift  Bazel5RC.swift
Part3_Bazel_iOS/: BUILD  Bazel6IOS.swift
Slide/: AnyView+Ex.swift  App.swift  BUILD  FocusView.swift
Slide/Assets.xcassets/buck.imageset/: Contents.json
Slide/Resource.bundle/iOS/: BUILD  MODULE.bazel  WORKSPACE  graph.dot  swift_deps_index.json
Slide/Resource.bundle/iOS/Example/: BUILD
Slide/Resource.bundle/iOS/ExampleTests/: BUILD
Slide/Resource.bundle/iOS/ExampleUITests/: BUILD
Slide/Resource.bundle/iOS/Framework1/: BUILD
Slide/Resource.bundle/iOS/Framework1Tests/: BUILD
Slide/Resource.bundle/iOS/Framework2/: BUILD
Slide/Resource.bundle/iOS/Framework2Tests/: ATests.swift  BUILD
Slide/Resource.bundle/iOS/Framework3/: BUILD
Slide/Resource.bundle/iOS/Framework3Tests/: BUILD
Slide/Resource.bundle/iOS/Static/: BUILD
Slide/Resource.bundle/iOS/Static2/: BUILD
Util/: Arch.swift  BUILD  Button+cmd.swift  Source+Ex.swift
