# Generated using Bazelize 0.0.4 - https://github.com/XCodeBazelize/Bazelize

module(
    name = "example",
    version = "0.0.1",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.4.1",
    # repo_name = None,
)

bazel_dep(
    name = "gazelle",
    version = "0.29.0",
    repo_name = "bazel_gazelle",
)

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.4.1",
    # repo_name = None,
)

bazel_dep(
    name = "rules_go",
    version = "0.38.1",
    repo_name = "io_bazel_rules_go",
)

bazel_dep(
    name = "rules_apple",
    version = "2.0.0",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "rules_swift",
    version = "1.5.1",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "rules_xcodeproj",
    version = "1.1.0",
    repo_name = "com_github_buildbuddy_io_rules_xcodeproj",
)

bazel_dep(
    name = "rules_apple_linker",
    version = "0.3.0",
    # repo_name = None,
)